--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,7 @@
 NODE_ENV = development
 PORT = 5080
 MONGO_URI = mongodb://localhost:27017/receiveasap_api
+REMOTEURL = mongodb+srv://admin:test@test.oamsg.gcp.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET = receiveApi@2021
 JWT_EXPIRE = 30d
 JWT_COOKIE_EXPIRE = 30
